--- a/src/navigation-bar/navigation-bar.css
+++ b/src/navigation-bar/navigation-bar.css
@@ -1,6 +1,7 @@
 .header {
   display: flex;
-  justify-content: flex-end;
+  flex-direction: row;
+  justify-content: space-between;
   align-items: center;
   padding-top: 2rem;
   padding-bottom: 2rem;
