--- a/src/mobile-navigation/mobile-navigation.css
+++ b/src/mobile-navigation/mobile-navigation.css
@@ -1,6 +1,7 @@
 .mobile-navigation {
   position: fixed;
   z-index: 999;
+  justify-content: center;
   width: 100%;
   height: 100%;
   background-color: var(--clr-ivory);
@@ -11,6 +12,15 @@
   transition: transform 0.5s ease-in-out;
 }
 
+.mobile-sapce {
+  height: 40vh;
+  /* margin-top: auto; */
+  /* margin-bottom: auto; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-left: 2rem;
+}
 .container-pad {
   padding-left: 0 !important;
   padding-right: 0 !important;
@@ -30,15 +40,19 @@
 }
 
 .closing-text .uppercase .split:nth-child(1) .line {
-  transition-delay: 0.6s; /* This will be the last to start hiding */
+  transition-delay: 0.4s; /* This will be the last to start hiding */
 }
 
 .closing-text .uppercase .split:nth-child(2) .line {
-  transition-delay: 0.4s; /* This will start hiding after the third item starts */
+  transition-delay: 0.3s; /* This will be the last to start hiding */
 }
 
 .closing-text .uppercase .split:nth-child(3) .line {
-  transition-delay: 0.2s; /* This will be the first to start hiding */
+  transition-delay: 0.2s; /* This will start hiding after the third item starts */
+}
+
+.closing-text .uppercase .split:nth-child(4) .line {
+  transition-delay: 0.1s; /* This will be the first to start hiding */
 }
 
 .split .mask {
@@ -63,15 +77,18 @@
 
 /* The transition starts after a slight delay, allowing the menu to begin appearing first */
 .open-text .uppercase .split:nth-child(1) .line {
-  transition-delay: 0.2s;
+  transition-delay: 0.1s;
 }
 
 .open-text .uppercase .split:nth-child(2) .line {
-  transition-delay: 0.4s;
+  transition-delay: 0.2s;
 }
 
 .open-text .uppercase .split:nth-child(3) .line {
-  transition-delay: 0.6s;
+  transition-delay: 0.3s;
+}
+.open-text .uppercase .split:nth-child(4) .line {
+  transition-delay: 0.4s;
 }
 
 .mobile-navigation-shown {
