--- a/src/navigation-bar/navigation-bar.css
+++ b/src/navigation-bar/navigation-bar.css
@@ -3,10 +3,13 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  padding-top: 2rem;
-  padding-bottom: 2rem;
   position: relative;
   z-index: 9999;
+}
+
+.logo {
+  width: 4rem; /* Adjust based on actual size */
+  height: 4rem; /* Adjust based on actual size */
 }
 
 .header-menu {
@@ -28,7 +31,7 @@
   right: 0; /* Align to the right edge */
   transform: translateY(-50%); /* Adjust vertically to truly center */
   width: 3rem; /* Adjust based on actual size */
-  height: 2rem; /* Adjust based on actual size */
+  height: 0.5rem; /* Adjust based on actual size */
   z-index: 100; /* Ensure it's above other content */
 }
 
