--- a/styles/index.css
+++ b/styles/index.css
@@ -40,9 +40,27 @@ html {
 }
 
 body {
+  min-height: 100svh;
   font-family: "General Sans", sans-serif;
   background-color: var(--clr-ivory);
   color: var(--clr-charcoal);
+}
+
+body:after,
+body:before {
+  position: fixed;
+  left: 0;
+  top: 0;
+  content: "";
+  width: 100%;
+  height: 100%;
+  z-index: 3023023023020;
+  pointer-events: none;
+  opacity: 20%;
+}
+
+body:before {
+  filter: url(#grainy);
 }
 
 img,
